# VITA-NoAutoAvls

./: CMakeLists.txt  README.md
app/: main.c
plugin/: naavls.c
